fixed nav icons misalignment issue above 991px made all containers use the same common css made all containers use same css for tablet & mobile

--- a/src/app/components/navigation-light/navigation-light.component.css
+++ b/src/app/components/navigation-light/navigation-light.component.css
@@ -125,6 +125,9 @@
 
 /* Between Large and Medium devices (desktops, tablets) */
 @media (min-width: 991px) and (max-width: 1200px) {
+  .nav-link-icons {
+    display: none;
+  }
 }
 
 /* All devices less than Medium devices */
